--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,4 +22,9 @@
         Déconnexion</a>
     </div>
   </div>
+
 </div>
+<div class="pt-5 mx-auto text-center mt-5">
+  <app-agenda></app-agenda>
+</div>
+
