--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,3 +23,7 @@
     </div>
   </div>
 </div>
+
+<span height="70" align="left" class="float-left" id="canvasClock">    
+  <cs-canvas-clock></cs-canvas-clock>    
+</span>
