--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,3 +27,5 @@
 <span height="70" align="left" class="float-left" id="canvasClock">    
   <cs-canvas-clock></cs-canvas-clock>    
 </span>
+
+<ng-calculator></ng-calculator>
