--- a/src/app/check-list/check-list.component.html
+++ b/src/app/check-list/check-list.component.html
@@ -1,9 +1,9 @@
 <div class="menuCheckList">
     <h1>Ensemble des checklist :</h1>
     <ul class="list-group">
-      <il class="list-group-item" *ngFor="let item of listElement; let j = index" (click)="changeCheckList(item, j)">
+      <li class="list-group-item" *ngFor="let item of listElement; let j = index" (click)="changeCheckList(item, j)">
         <span class="hover-cursor" (click)="changeCheckList(item, j)">{{item}}</span>
-      </il>
+      </li>
     </ul>
     
   </div>
@@ -15,7 +15,7 @@
   
     <div class="input-group">
       <input type="text" class="form-control" [(ngModel)]="newElement">
-      <div class="input-group-addon hover-cursor" (click)="onAdd(newElement)">
+      <div class="input-group-addon hover-cursor" (click)="onAdd()">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
           <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
