end auth service

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
       </div>
     </form>
     <div routerLinkActive="active">
-      <a routerLink="/register">Se connecter</a>
+      <a routerLink="/register">S'inscrire</a>
     </div>
   </div>
 </div>
