--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,15 +7,17 @@
     <form name="formLogin" (ngSubmit)="onSubmit(f)" #f="ngForm" novalidate>
       <div class="form-group mt-3">
         <label for="username">Identifiant</label>
-        <input type="text" class="form-control" name="username" id="username"
+        <input [ngClass]="{'is-invalid': this.error.username}"
+               type="text" class="form-control" name="username" id="username" [(ngModel)]="this.usernameData"
                placeholder='Saisissez votre identifiant' required ngModel/>
       </div>
       <div class="form-group mt-3">
         <label for="password">Mot de passe</label>
-        <input type="password" class="form-control" name="password" id="password"
+        <input [ngClass]="{'is-invalid': this.error.password}"
+               type="password" class="form-control" name="password" id="password"
                placeholder='Saisissez votre mot de passe' required ngModel/>
       </div>
-      <div class="checkbox mt-3"><label class="m-0"><input name="remember" type="checkbox" value="remember-me" ngModel> Se souvenir de moi </label>
+      <div class="checkbox mt-3"><label class="m-0"><input name="remember" type="checkbox" [(ngModel)]="this.isCheck" ngModel> Se souvenir de moi </label>
       </div>
       <div class="form-group mt-3">
         <button class="btn btn-primary mt-2  btn-block" [disabled]="!f.form.valid">Connexion</button>
