--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,8 +26,10 @@
   </div>
 </div>
 
-<span height="70" align="left" class="float-left" id="canvasClock">    
-  <cs-canvas-clock></cs-canvas-clock>    
-</span>
+<div id="clock">
+  <cs-canvas-clock></cs-canvas-clock>
+</div>
 
-<ng-calculator></ng-calculator>
+<div id="calculor">
+  <ng-calculator></ng-calculator>
+</div>
