--- a/src/app/check-list/check-list.component.css
+++ b/src/app/check-list/check-list.component.css
@@ -1,13 +1,20 @@
-.menuCheckList {
-    position: relative;
-    background-color: darkslategrey;
-    float: right;
+.checkList {
+    text-align: center;
+}
+.test {
     width: 25vw;
-    height: 100vh;
+    height: 25vh;
+    overflow: auto;
 }
 
-.checkList {
-    position: relative;
-    width: 74.9vw;
-    text-align: center;
+.barMenuFirstPart {
+  position: relative;
+}
+
+.barMenuSecondPart {
+  position: relative;
+}
+
+.barMenu {
+  display: inline-flex;
 }
