--- a/src/app/check-list/check-list.component.html
+++ b/src/app/check-list/check-list.component.html
@@ -1,28 +1,50 @@
-<div class="menuCheckList">
-    <h1>Ensemble des checklist :</h1>
-    <ul class="list-group">
-      <li class="list-group-item" *ngFor="let item of listElement; let j = index" (click)="changeCheckList(item, j)">
-        <span class="hover-cursor" (click)="changeCheckList(item, j)">{{item}}</span>
-      </li>
-    </ul>
-    
+<div class="test">
+  <div class="barMenu">
+    <div class="barMenuFirstPart">
+      <button type="button" class="btn btn-success" (click)="menuCheckList = true" *ngIf="menuCheckList == false">Menu</button>
+      <button type="button" class="btn btn-success" (click)="menuCheckList = false" *ngIf="menuCheckList == true">CheckList</button>
+    </div>
+    <button type="button" class="btn btn-success" (click)="resetAllCheckList()" *ngIf="menuCheckList == true">Reset</button>
+
+    <div class="barMenuSecondPart">
+      <button type="button" class="btn btn-success" (click)="true">Fermer</button>
+    </div>
   </div>
   
-  <div class="checkList">
+
+  <div class="menuCheckList" *ngIf="menuCheckList == true">
+    <h1>Ensemble des checklist :</h1>
+    <ul class="list-group">
+      <li class="list-group-item">
+        <button type="button" class="btn btn-dark" (click)="onAddNewCheckList()">New</button>
+      <li class="list-group-item" *ngFor="let item of listElement; let j = index" (click)="changeCheckList(item, j)">
+        <button type="button" class="btn btn-light">{{item}}</button>
+        <span class="hover-cursor text-danger pull-right" (click)="onDeleteCheckList(j)">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+          </svg>
+        </span>
+      </li>
+    </ul>
+
+  </div>
+
+  <div class="checkList" *ngIf="menuCheckList == false">
     <div class="jumbotron" style="padding:45px 0px">
       <input type="text" class="text-center" [(ngModel)]="nomCheckList">
     </div>
-  
+
     <div class="input-group">
       <input type="text" class="form-control" [(ngModel)]="newElement">
-      <div class="input-group-addon hover-cursor" (click)="onAdd()">
+      <div class="input-group-addon hover-cursor" (click)="onAddCheckList()">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
           <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
         </svg>
       </div>
     </div>
-  
+
     <div style="margin:5px 0px">
       <ul class="list-group">
         <li class="list-group-item" *ngFor="let item of toDoList; let i = index">
@@ -36,7 +58,7 @@
             </svg>
           </span>
           {{item.key}}
-          <span class="hover-cursor text-danger pull-right" (click)="onDelete(i)">
+          <span class="hover-cursor text-danger pull-right" (click)="onDeleteElementList(i)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
               <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
               <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
@@ -46,4 +68,5 @@
       </ul>
     </div>
   </div>
-  
+</div>
+
