--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-3 col-md-offset-3 mx-auto text-center mt-5">
   <div class="register-wrapper">
     <img class="w-50"
-         src="https://www.mesmarques-enbourse.com/wp-content/themes/mes-marques-en-bourse/logos/600x600/40000009556.jpg"
+         src="../../assets/desktop.png"
          alt="..."/>
     <h2 class="mb-4">S'enregistrer</h2>
     <form (ngSubmit)="onSubmit(f)" #f="ngForm" novalidate>
