profil + repertoire + tache

--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,34 +1,20 @@
 <div class="profil">
     <ul class="list-group">
-      <li class="list-group-item">
+      <li class="list-group-item d-flex flex-column">
         <div>Nom d'utilisateur: </div>
-        <div class="username"> {{ username }} </div>
-        <div class="crayonModif" [ngStyle]="{'background-image': getUrlCrayon()}" (click)="activeModif('username')"> </div>
-        <input type="text" class="form-control" [(ngModel)]="username" *ngIf="isUsernameModif === 'true'" />
+        <input type="text" class="form-control bg-light w-50 mt-3 mx-auto" [(ngModel)]="username" />
       </li>
-  
-      <li class="list-group-item">
+
+      <li class="list-group-item d-flex flex-column">
         <div>Adresse Mail: </div>
-        <div class="email"> {{ email }} </div>
-        <div class="crayonModif" [ngStyle]="{'background-image': getUrlCrayon()}" (click)="activeModif('email')"> </div>
-        <input type="text" class="form-control" [(ngModel)]="email" *ngIf="isEmailModif === 'true'" />
+        <input type="text" class="form-control bg-light w-50 mt-3 mx-auto" [(ngModel)]="email" />
       </li>
-  
-      <li class="list-group-item">
-        <div>Mot de passe: </div>
-        <div class="password"> {{ password }} </div>
-        <div class="crayonModif" [ngStyle]="{'background-image': getUrlCrayon()}" (click)="activeModif('password')"> </div>
-        <input type="text" class="form-control" [(ngModel)]="password" *ngIf="isPasswordModif === 'true'" />
-      </li>
-  
-      <li class="list-group-item">
+
+      <li class="list-group-item d-flex flex-column">
         <div>Fond d'écran: </div>
-        <div class="wallpaper"> {{ wallpaper }} </div>
-        <div class="crayonModif" [ngStyle]="{'background-image': getUrlCrayon()}" (click)="activeModif('wallpaper')"> </div>
-        <input type="text" class="form-control" [(ngModel)]="wallpaper" *ngIf="isWallpaperModif === 'true'" />
+        <input type="text" class="form-control bg-light w-50 mt-3 mx-auto" [(ngModel)]="wallpaper" />
       </li>
     </ul>
-    <button type="button" class="btn btn-success" (click)="saveChanges()">Sauvegarder</button>
+    <button type="button" class="btn btn-success mt-3" (click)="saveChanges()">Sauvegarder</button>
     <div class="saveEffect" *ngIf="isNewSave === 'true'">Changements sauvegardés</div>
   </div>
-  
