--- a/src/app/widget/repertoire/repertoire.component.html
+++ b/src/app/widget/repertoire/repertoire.component.html
@@ -1,12 +1,12 @@
 <div class="repertoire">
-  <div class="jumbotron" style="padding:45px 0px">
+  <div>
     <h1 class="text-center">Répertoire de contacts :</h1>
   </div>
 
   <button type="button" class="btn btn-success" (click)="ajoutContact = true; modificationActive = false" *ngIf="ajoutContact == false">Ajouter</button>
   <button type="button" class="btn btn-success" (click)="ajoutContact = false" *ngIf="ajoutContact == true && modificationActive == false">Annuler</button>
 
-  <div class="input-group" *ngIf="ajoutContact == true">
+  <div class="input-group d-flex justify-content-center mt-3" *ngIf="ajoutContact == true">
     <div class="createContact">
       <h4>Nom d'utilisateur:</h4>
       <input type="text" class="form-group" placeholder="Prénom" [(ngModel)]="newContact.username" />
@@ -16,15 +16,15 @@
       <input type="text" class="form-group" placeholder="01 23 45 67 89" [(ngModel)]="newContact.phoneNumber"/>
     </div>
 
-    <button type="button" class="btn btn-success" (click)="onAddContact()">Ajouter</button>
+    <button type="button" class="btn btn-success ml-2" (click)="onAddContact()">Ajouter</button>
   </div>
 
-  <div style="margin:5px 0px" *ngIf="ajoutContact == false">
-    <ul class="list-group">
+  <div style="margin:5px 0" *ngIf="ajoutContact == false">
+    <ul class="list-group" style="overflow-y: scroll; overflow-x: hidden; max-height: 320px">
       <li class="list-group-item" *ngFor="let element of listContact; let k = index">
-        <h3>Nom d'utilisateur: {{element.username}}</h3>
-        <h3>Adresse Mail: {{element.email}}</h3>
-        <h3>N° de téléphone: {{element.phoneNumber}}</h3>
+        <div><h5>Nom d'utilisateur: </h5> {{element.username}}</div>
+        <div><h5>Adresse Mail: </h5>{{element.email}}</div>
+        <div><h5>N° de téléphone: </h5>{{element.phoneNumber}}</div>
 
         <span class="hover-cursor text-danger pull-right" (click)="modifierContact(k)">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
