--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -22,6 +22,23 @@
   left: 10px;
 }
 
+#check-list {
+  width: 400px;
+  height: 500px;
+  position: absolute;
+  top : 10px;
+  left: 508px;
+}
+
+#repertoire {
+  width: 400px;
+  height: 500px;
+  position: absolute;
+  top : 520px;
+  left: 508px;
+}
+
+
 #disconnect, #profile {
   cursor: pointer;
 }
