--- a/src/app/widget/check-list/check-list.component.html
+++ b/src/app/widget/check-list/check-list.component.html
@@ -1,23 +1,23 @@
-<div class="test">
-  <div class="barMenu">
+<div class="jumbotron test p-2 bg-inverse">
+  <div class="barMenu d-flex justify-content-center">
     <div class="barMenuFirstPart">
-      <button type="button" class="btn btn-success" (click)="menuCheckList = true" *ngIf="menuCheckList == false">Menu</button>
-      <button type="button" class="btn btn-success" (click)="menuCheckList = false" *ngIf="menuCheckList == true">CheckList</button>
+      <button type="button" class="btn btn-success ml-2 mr-2" (click)="menuCheckList = true" *ngIf="menuCheckList == false">Menu</button>
+      <button type="button" class="btn btn-success ml-2 mr-2" (click)="menuCheckList = false" *ngIf="menuCheckList == true">CheckList</button>
     </div>
-    <button type="button" class="btn btn-success" (click)="resetAllCheckList()" *ngIf="menuCheckList == true">Reset</button>
+    <button type="button" class="btn btn-success ml-2 mr-2" (click)="resetAllCheckList()" *ngIf="menuCheckList == true">Reset</button>
 
     <div class="barMenuSecondPart">
-      <button type="button" class="btn btn-success" (click)="true">Fermer</button>
+      <button type="button" class="btn btn-success ml-2 mr-2" (click)="true">Fermer</button>
     </div>
   </div>
-  
+
 
   <div class="menuCheckList" *ngIf="menuCheckList == true">
-    <h1>Ensemble des checklist :</h1>
-    <ul class="list-group">
+    <h1 class="mt-3">Ensemble des checklist :</h1>
+    <ul class="list-group " style="overflow-y: scroll; max-height: 300px;">
       <li class="list-group-item">
         <button type="button" class="btn btn-dark" (click)="onAddNewCheckList()">New</button>
-      <li class="list-group-item" *ngFor="let item of listElement; let j = index" (click)="changeCheckList(item, j)">
+      <li class="list-group-item" *ngFor="let item of listElement; let j = index" (click)="changeCheckList(j)">
         <button type="button" class="btn btn-light">{{item}}</button>
         <span class="hover-cursor text-danger pull-right" (click)="onDeleteCheckList(j)">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
@@ -31,8 +31,8 @@
   </div>
 
   <div class="checkList" *ngIf="menuCheckList == false">
-    <div class="jumbotron" style="padding:45px 0px">
-      <input type="text" class="text-center" [(ngModel)]="nomCheckList">
+    <div style="padding:30px 0">
+      <input type="text" class="text-center" [(ngModel)]="listElement[numEltCheckList]">
     </div>
 
     <div class="input-group">
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div style="margin:5px 0px">
+    <div style="margin:5px 0; overflow-y: scroll; max-height: 300px;">
       <ul class="list-group">
         <li class="list-group-item" *ngFor="let item of toDoList; let i = index">
           <span class="hover-cursor" [class.text-success]="isChecked(i)" (click)="alterCheck(i)">
