--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,18 @@
   </div>
 
 </div>
-<div class="pt-5 mx-auto text-center mt-5">
+<script>
+  function dragstart_handler(ev) {
+   // On ajoute l'identifiant de l'élément cible à l'objet de transfert
+   ev.dataTransfer.setData("text/plain", ev.target.innerText);
+  }
+  </script>
+  
+
+<div id="agenda" class="pt-5 mt-5" cdkDrag>
+
   <app-agenda></app-agenda>
 </div>
+
+  <app-note></app-note>
 
