--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,19 +34,19 @@
   </script>
   
 
-<div id="clock">
+<div id="clock" cdkDrag>
   <cs-canvas-clock></cs-canvas-clock>
 </div>
 
-<div id="calculor">
+<div id="calculor" cdkDrag>
   <ng-calculator></ng-calculator>
 </div>
 
-<div id="check-list" class="jumbotron pt-2 pb-2 m-0">
+<div id="check-list" class="jumbotron pt-2 pb-2 m-0" cdkDrag>
   <app-check-list></app-check-list>
 </div>
 
-<div id="repertoire" class="jumbotron pt-2 pb-2 m-0">
+<div id="repertoire" class="jumbotron pt-2 pb-2 m-0" cdkDrag>
   <app-repertoire></app-repertoire>
 </div>
 
