--- a/src/app/profil/profil.component.css
+++ b/src/app/profil/profil.component.css
@@ -3,10 +3,19 @@
     justify-items: center;
     text-align: center;
   }
-  
-  .crayonModif {
-    width: 3vw;
-    height: 3vh;
-    margin-left: 47.5vw;
-  }
-  
+
+.crayonModif {
+  width: 3vw;
+  height: 3vh;
+  margin-left: 47.5vw;
+}
+
+#profilButton {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+#username {
+  display: inline-block;
+}
