--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,20 +1,44 @@
 <div class="profil">
-    <ul class="list-group">
-      <li class="list-group-item d-flex flex-column">
+    <div class="btn-group" id="profilButton">
+      <button class="btn btn-primary first" title="Profil">
+        <div id="username" class="text-center font-weight-bolder pl-3 pr-4">{{ ucFirst(user.username) }}</div>
+        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-person mx-auto mb-1" viewBox="0 0 16 16">
+          <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+        </svg>
+      </button>
+
+      <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split second" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent" data-offset="-10,0">
+        <span class="sr-only">Toggle Dropdown</span>
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuReference">
+        <a id="profile" class="dropdown-item" [routerLink]="['/home']">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house mx-auto mb-1" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+            <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+          </svg>
+          Home</a>
+        <a id="disconnect" class="dropdown-item" (click)="logout()" >
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left mx-auto mb-1" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"/>
+            <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"/>
+          </svg>
+          Déconnexion</a>
+      </div>
+    </div>
+    <ul class="list-group mt-5">
+      <li class="list-group-item d-flex flex-column mt-4">
         <div>Nom d'utilisateur: </div>
-        <input type="text" class="form-control bg-light w-50 mt-3 mx-auto" [(ngModel)]="username" />
+        <input type="text" class="form-control bg-light w-50 mt-3 mx-auto" [(ngModel)]="username" (change)="updateUsername(username)" />
       </li>
 
       <li class="list-group-item d-flex flex-column">
         <div>Adresse Mail: </div>
-        <input type="text" class="form-control bg-light w-50 mt-3 mx-auto" [(ngModel)]="email" />
+        <input type="text" class="form-control bg-light w-50 mt-3 mx-auto" [(ngModel)]="email" (change)="updateAdress(email)" />
       </li>
 
       <li class="list-group-item d-flex flex-column">
         <div>Fond d'écran: </div>
-        <input type="text" class="form-control bg-light w-50 mt-3 mx-auto" [(ngModel)]="wallpaper" />
+        <input type="text" class="form-control bg-light w-50 mt-3 mx-auto" [(ngModel)]="wallpaper" (change)="updateBackground(wallpaper)" />
       </li>
     </ul>
-    <button type="button" class="btn btn-success mt-3" (click)="saveChanges()">Sauvegarder</button>
-    <div class="saveEffect" *ngIf="isNewSave === 'true'">Changements sauvegardés</div>
   </div>
