Auto stash before merge of "global" and "origin/global"

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,28 +32,26 @@
    ev.dataTransfer.setData("text/plain", ev.target.innerText);
   }
   </script>
-  
 
-<div id="clock" cdkDrag>
-  <app-clock></app-clock>
-</div>
 
-<div id="calculor" cdkDrag>
-  <ng-calculator></ng-calculator>
-</div>
+  <div id="clock" cdkDrag [cdkDragData]="clock"(cdkDragMoved)="gpsClockCo($event)" (cdkDragEnded)="updateClockCo($event)" [cdkDragFreeDragPosition]="dragPositionClock">
+    <app-clock></app-clock>
+  </div>
 
-<div id="check-list" class="jumbotron pt-2 pb-2 m-0" cdkDrag>
-  <app-check-list></app-check-list>
-</div>
+  <div id="calculor" cdkDrag [cdkDragData]="clock"(cdkDragMoved)="gpsCalcCo($event)"(cdkDragEnded)="updateCalcCo($event)"[cdkDragFreeDragPosition]="dragPositionCalc">
+    <ng-calculator></ng-calculator>
+  </div>
 
-<div id="repertoire" class="jumbotron pt-2 pb-2 m-0" cdkDrag>
-  <app-repertoire></app-repertoire>
-</div>
+  <div id="check-list" class="jumbotron pt-2 pb-2 m-0" cdkDrag [cdkDragData]="clock"(cdkDragMoved)="gpsCheckCo($event)"(cdkDragEnded)="updateCheckCo($event)"[cdkDragFreeDragPosition]="dragPositionCheck">
+    <app-check-list></app-check-list>
+  </div>
 
-<div id="agenda" class="pt-5 mt-5" cdkDrag>
+  <div id="repertoire" class="jumbotron pt-2 pb-2 m-0" cdkDrag [cdkDragData]="clock"(cdkDragMoved)="gpsRepCo($event)"(cdkDragEnded)="updateRepCo($event)"[cdkDragFreeDragPosition]="dragPositionRep">
+    <app-repertoire></app-repertoire>
+  </div>
 
-  <app-agenda></app-agenda>
-</div>
+  <div id="agenda" class="pt-5 mt-5" cdkDrag [cdkDragData]="clock"(cdkDragMoved)="gpsAgendaCo($event)"(cdkDragEnded)="updateAgendaCo($event)"[cdkDragFreeDragPosition]="dragPositionAgenda">
 
+    <app-agenda></app-agenda>
+  </div>
   <app-note></app-note>
-
