--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,7 +50,7 @@
   <app-repertoire></app-repertoire>
 </div>
 
-<div id="agenda" class="pt-5 mt-5" [ngClass]="statusClass3" (click)="setActiveClass3()" cdkDrag>
+<div id="agenda" class="mt-5" [ngClass]="statusClass3" (click)="setActiveClass3()" cdkDrag>
 
   <app-agenda></app-agenda>
 </div>
