--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,34 +26,28 @@
   </div>
 
 </div>
-<script>
-  function dragstart_handler(ev) {
-   // On ajoute l'identifiant de l'élément cible à l'objet de transfert
-   ev.dataTransfer.setData("text/plain", ev.target.innerText);
-  }
-  </script>
   
 
-<div id="clock" [ngClass]="statusClass2" (click)="setActiveClass2()" cdkDrag>
+<div id="clock" [ngClass]="statusClass2" (click)="setActiveClass2()" (cdkDragStarted)="setActiveClass2()" cdkDrag>
   <cs-canvas-clock></cs-canvas-clock>
 </div>
 
-<div id="calculor" [ngClass]="statusClass1" (click)="setActiveClass1()" cdkDrag>
+<div id="calculor" [ngClass]="statusClass1" (click)="setActiveClass1()" (cdkDragStarted)="setActiveClass1()" cdkDrag>
   <ng-calculator></ng-calculator>
 </div>
 
-<div id="check-list" class="jumbotron pt-2 pb-2 m-0" cdkDrag>
+<div id="check-list" class="jumbotron pt-2 pb-2 m-0" (click)="setActiveClass5()" (cdkDragStarted)="setActiveClass5()" cdkDrag>
   <app-check-list></app-check-list>
 </div>
 
-<div id="repertoire" class="jumbotron pt-2 pb-2 m-0" [ngClass]="statusClass4" (click)="setActiveClass4()" cdkDrag>
+<div id="repertoire" class="jumbotron pt-2 pb-2 m-0" [ngClass]="statusClass4" (click)="setActiveClass4()" (cdkDragStarted)="setActiveClass4()" cdkDrag>
   <app-repertoire></app-repertoire>
 </div>
 
-<div id="agenda" class="mt-5" [ngClass]="statusClass3" (click)="setActiveClass3()" cdkDrag>
-
+<div id="agenda" class="mt-5" [ngClass]="statusClass3" (click)="setActiveClass3()" (cdkDragStarted)="setActiveClass3()" cdkDrag>
   <app-agenda></app-agenda>
 </div>
+
 
   <app-note></app-note>
 
