--- a/src/app/widgets/note/note/snote.component.html
+++ b/src/app/widgets/note/note/snote.component.html
@@ -1,6 +1,5 @@
 
-<div class="note" 
-cdkDrag contenteditable="true">
+<div class="note" cdkDrag contenteditable="true">
 
 <div class="example-handle"  contenteditable="false" cdkDragHandle>
 	<svg width="24px" fill="currentColor" viewBox="0 0 24 24">
